trying fix on detail panem portfolio page hero image stretch on safari

--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -439,7 +439,6 @@
 		}
 		img#detailpanem-hero {
 			width:100%;
-			height:auto;
 		}
 		ul.goals-list {
 			@media screen and (min-width:992px) {
